<resources>
    <string name="app_name" translatable="false">Money Flow Tracker</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="settings">Settings</string>
    <string name="ok_button_text">ok</string>
    <string name="cancel_button_text">cancel</string>
    <string name="done_button_text">done</string>
    <string name="delete_target_dialog_title">Delete target?</string>
    <string name="delete_emission_dialog_title">Delete emission?</string>
    <string name="add_new_wallet_button_text">new wallet</string>
    <string name="emission_start_date_hint">Starts at</string>
    <string name="select_start_date_button_label">Select date</string>
    <string name="delete_wallet_dialog_title">Delete wallet?</string>
    <string name="start_balance_label">Start Balance</string>
    <string name="new_wallet_default_label_text">New Wallet</string>
    <string name="wallet_menu_item">Wallet</string>
    <string name="targets_menu_item">Targets</string>
    <string name="stats_menu_item">Chart</string>
    <string name="fin_target_list_view_default_title">My Target</string>
    <string name="required">Required:</string>
    <string name="emission_default_title">New Flow</string>
    <string name="emission_period_label">Period:</string>
    <string name="new_target_title_hint">Target Title</string>
    <string name="new_target_required_hint">Required</string>
    <string-array name="emission_repeat_rules">
        <item>Once</item>
        <item>EveryDay</item>
        <item>EveryWeek</item>
        <item>EveryMonth</item>
        <item>EveryYear</item>
    </string-array>
    <string-array name="emission_directions">
        <item>Add</item>
        <item>Spend</item>
    </string-array>
    <string-array name="default_wallet_strings">
        <item>Wallet1</item>
        <item>Wallet2</item>
    </string-array>
</resources>