<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <EditText
        android:id="@+id/add_wallet_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/new_wallet_default_label_text"
        android:hint="@string/new_wallet_default_label_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_wallet_start_balance_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_balance_label"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_wallet_title_et" />

    <Button
        android:id="@+id/confirm_new_wallet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ok_button_text"
        android:textColor="@color/pure_white"
        app:layout_constraintEnd_toEndOf="@+id/add_wallet_start_balance_et"
        app:layout_constraintTop_toBottomOf="@id/add_wallet_start_balance_et" />

    <Button
        android:id="@+id/revert_new_wallet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/cancel_button_text"
        android:textColor="@color/pure_white"
        app:layout_constraintStart_toStartOf="@+id/add_wallet_start_balance_et"
        app:layout_constraintTop_toBottomOf="@id/add_wallet_start_balance_et" />

</androidx.constraintlayout.widget.ConstraintLayout>