<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_marginVertical="4dp"
    android:elevation="10dp"
    android:background="@color/pure_white">

    <TextView
        android:id="@+id/money_emission_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emission_default_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money_emission_item_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emission_start_date_hint"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/money_emission_item_title"
        app:layout_constraintTop_toBottomOf="@+id/money_emission_item_title" />

    <TextView
        android:id="@+id/money_emission_item_start_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="00.00.0000"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/money_emission_item_start_label"
        app:layout_constraintStart_toEndOf="@+id/money_emission_item_start_label"
        app:layout_constraintTop_toTopOf="@+id/money_emission_item_start_label" />

    <TextView
        android:id="@+id/money_emission_item_period_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emission_period_label"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_emission_item_start_label" />

    <TextView
        android:id="@+id/money_emission_item_period_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Once"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/money_emission_item_period_label"
        app:layout_constraintStart_toEndOf="@+id/money_emission_item_period_label"
        app:layout_constraintTop_toTopOf="@+id/money_emission_item_period_label" />

    <TextView
        android:id="@+id/money_emission_item_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="100"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/money_emission_item_direction_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_upward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>